--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/public/styles/main.css" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
-    crossorigin="anonymous"
-  />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+      crossorigin="anonymous"
+    />
+    <script src="https://kit.fontawesome.com/14d1b7c22f.js" crossorigin="anonymous"></script>
     <title>G2G Entertainment</title>
-</head>
-<body>
-    <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <span class="fs-4">Simple header</span>
-      </a>
-
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link active">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link active"></a></li>
-        <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-      </ul>
-    </header>
-  </div>
-</body>
-<script src="/scripts/script.js"></script>
+  </head>
+  <body>
+    <main>
+      <section class="hero artist-display">
+        <header>
+          <div class="g2g-logo">
+            <a href="./index.html">
+              <img src="/public/images/grass2grace.png" alt="g2g_pro_logo" />
+            </a>
+          </div>
+          <div class="navbar">
+            <ul class="nav-items">
+              <li class="nav-item"><a href="">Home</a></li>
+              <li class="nav-item"><a href="">About Us</a></li>
+              <li class="nav-item"><a href="">Artists</a></li>
+              <li class="nav-item"><a href="">Music</a></li>
+              <li class="nav-item"><a href="">Contact</a></li>
+            </ul>
+          </div>
+          <div class="social-media">
+            <div class="media"><a href=""><i class="fa-brands fa-youtube"></i></a> </div>
+            <div class="media"><a href=""><i class="fa-brands fa-spotify"></i></a></div>
+            <div class="media"><a href=""><i class="fa-brands fa-soundcloud"></i></a></div>
+            <div class="media"><a href=""><i class="fa-brands fa-facebook"></i></a></div>
+            <div class="media"><a href=""><i class="fa-brands fa-instagram"></i></a></div>
+          </div>
+        </header>
+        <!-- <aside class="intro-music">
+          <div class="listen-now">
+            <h3><a href="">LISTEN NOW</a></h3>
+          </div>
+          <div class="music-title">
+            <h1>INFATUATED</h1>
+          </div>
+        </aside> -->
+      </section>
+    </main>
+  </body>
+  <script src="/scripts/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </html>
