full stop on hero and header section; about section kickstart

--- a/src/index.html
+++ b/src/index.html
@@ -1,108 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/public/styles/main.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://kit.fontawesome.com/14d1b7c22f.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-    <title>G2G Entertainment</title>
-  </head>
-  <body>
-    <main>
-      <header>
-        <div class="g2g-logo">
-          <a href="./index.html">
-            <img src="/public/images/grass2grace.png" alt="g2g_pro_logo" />
-          </a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/public/styles/main.css" />
+  <script src="https://kit.fontawesome.com/14d1b7c22f.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+  <title>G2G Entertainment</title>
+</head>
+
+<body>
+  <main>
+    <header>
+      <div class="g2g-logo">
+        <a href="./index.html">
+          <img src="/public/images/grass2grace.png" alt="g2g_pro_logo" />
+        </a>
+      </div>
+      <div class="nav-bar">
+        <ul class="nav-items">
+          <li class="nav-item"><a href="./index.html">Home</a></li>
+          <li class="nav-item"><a href="#about">About Us</a></li>
+          <li class="nav-item"><a href="">Artists</a></li>
+          <li class="nav-item"><a href="">Music</a></li>
+          <li class="nav-item"><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+      <div class="social-media">
+        <div class="media">
+          <a href="https://www.youtube.com/@itsg2gentertainment"><i class="fa-brands fa-youtube"></i></a>
         </div>
-        <div class="navbar">
-          <ul class="nav-items">
-            <li class="nav-item"><a href="">Home</a></li>
-            <li class="nav-item"><a href="#about">About Us</a></li>
-            <li class="nav-item"><a href="">Artists</a></li>
-            <li class="nav-item"><a href="">Music</a></li>
-            <li class="nav-item"><a href="">Contact</a></li>
-          </ul>
+        <div class="media">
+          <a href=""><i class="fa-brands fa-spotify"></i></a>
         </div>
-        <div class="social-media">
-          <div class="media">
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
-          </div>
-          <div class="media">
-            <a href=""><i class="fa-brands fa-spotify"></i></a>
-          </div>
-          <div class="media">
-            <a href=""><i class="fa-brands fa-soundcloud"></i></a>
-          </div>
-          <div class="media">
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-          </div>
-          <div class="media">
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-          </div>
+        <div class="media">
+          <a href=""><i class="fa-brands fa-soundcloud"></i></a>
         </div>
-      </header>
-      <section class="hero artist-display">
-        <aside class="intro-music">
-          <div class="listen-now">
-            <h2><a href="">Listen Now</a></h2>
-          </div>
-          <div class="music-title">
-            <h1>Infatuated</h1>
-            <h5>Valdo Dalow</h5>
-          </div>
-        </aside>
-        <aside>
-          <!-- <div class="lyric">
+        <div class="media">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+        </div>
+        <div class="media">
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+    </header>
+    <section class="hero artist-display">
+
+      <aside class="intro-music">
+        <div class="listen-now">
+          <h2><a href="">Listen Now</a></h2>
+        </div>
+        <div class="music-title">
+          <h1>Infatuated</h1>
+          <h5>Valdo Dalow</h5>
+        </div>
+      </aside>
+      <aside>
+        <!-- <div class="lyric">
             <h6>
               you don't sound like others <br />
               you don't follow others <br />
               you just dey make me infatuated
             </h6>
           </div> -->
-        </aside>
-      </section>
-      <section class="about-us" id="about">
-        <div class="about-heading">
-          <h1>About Us</h1>
+      </aside>
+    </section>
+    <section class="about-us" id="about">
+      <div class="about-heading">
+        <h1>About Us</h1>
+      </div>
+      <div class="about-logo">
+        <div class="about-p">
+          <p>
+            Grass2Grace (G2G) isn't just a record label; it's a movement, a
+            journey from humble beginnings to soaring heights, a testament to
+            the power of passion and perseverance in the world of music. With
+            a vision as vast as the open sky and a mission to nurture raw
+            talent into polished gems, G2G stands as a beacon of hope for
+            aspiring artists everywhere. From the crackle of vinyl to the
+            digital beats of today, G2G has remained at the forefront of
+            innovation, seamlessly blending tradition with modernity to create
+            timeless melodies that resonate with the soul. With each release,
+            G2G doesn't just produce music; it crafts experiences, tells
+            stories, and builds bridges between hearts and minds. As the world
+            spins on its axis, G2G remains steadfast in its commitment to
+            elevate voices, amplify dreams, and ultimately, transform lives
+            through the universal language of music.
+          </p>
         </div>
-        <div class="about-logo">
-          <div class="about-p">
-            <p>
-              Grass2Grace (G2G) isn't just a record label; it's a movement, a
-              journey from humble beginnings to soaring heights, a testament to
-              the power of passion and perseverance in the world of music. With
-              a vision as vast as the open sky and a mission to nurture raw
-              talent into polished gems, G2G stands as a beacon of hope for
-              aspiring artists everywhere. From the crackle of vinyl to the
-              digital beats of today, G2G has remained at the forefront of
-              innovation, seamlessly blending tradition with modernity to create
-              timeless melodies that resonate with the soul. With each release,
-              G2G doesn't just produce music; it crafts experiences, tells
-              stories, and builds bridges between hearts and minds. As the world
-              spins on its axis, G2G remains steadfast in its commitment to
-              elevate voices, amplify dreams, and ultimately, transform lives
-              through the universal language of music.
-            </p>
+      </div>
+    </section>
+    <section class="contact-form" id="contact">
+      <div class="contact">
+        <form action="submit_contact_form.php" method="POST">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Type your name here" required>
           </div>
-        </div>
-      </section>
-    </main>
-  </body>
-  <script src="/scripts/script.js"></script>
-  <script>
-    
-  </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required>
+          </div>
+
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" placeholder="Type your message here" required></textarea>
+          </div>
+
+          <button type="submit">Send <i></i></button>
+        </form>
+      </div>
+
+    </section>
+  </main>
+</body>
+<script src="/scripts/script.js"></script>
+<script>
+
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 </html>
